--- a/code/documentation/assets/scss/documentation.scss
+++ b/code/documentation/assets/scss/documentation.scss
@@ -5,27 +5,26 @@ html, body{
   overflow: hidden;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  line-height:1.45;
+  line-height:1.55;
   font-size:1rem;
 }
 
 
-main{
+.container{
   display:grid;
-  grid-template-areas:
-    "nav article";
   grid-column-gap:1rem;
-  grid-template-columns: minmax(20vw, 20rem) minmax(min(50vw, 30ch), 1fr);
+  grid-template-columns: minmax(17vw, 18rem) minmax(min(50vw, 30ch), 1fr);
   height:100%;
   overflow:hidden;
 }
 
-nav, article{
-  overflow-y:scroll;
+nav, main{
+  overflow-y:auto;
 }
 
 h1{
   font-size:2rem;
+  margin-top:0;
 }
 
 img{
@@ -58,7 +57,6 @@ a.spec{
 }
 
 nav{
-  grid-area: nav;
   background-color:rgb(242, 245, 243);
   padding:1em;
   overflow-wrap: break-word;
@@ -115,6 +113,7 @@ nav{
          padding-top: .33rem;
      }
     }
+    
 }
 
 .nav-item{
@@ -165,9 +164,23 @@ h2{
 }
 
 article{
-  grid-area: article;
-  padding:0 10% 10% 3%;
+   padding: 1rem clamp(1rem, 5%, 3rem) 0 clamp(.5rem, 2.5%, 1.5rem);
 }
+
+article > *{
+    max-width: 50rem;
+
+}
+
+article {
+    & > *:is(.table-container, code, pre){
+        max-width:80rem;
+        overflow-x:auto;
+    }
+    
+}
+
+
 
 pre{
   white-space:pre-wrap;
@@ -183,6 +196,7 @@ pre{
 table{
   border-collapse:collapse;
   padding:1em;
+  width:100%;
 }
 
 tr, td{
