Adjusting CSS for imgs and sidebar

--- a/code/documentation/assets/scss/documentation.scss
+++ b/code/documentation/assets/scss/documentation.scss
@@ -13,7 +13,7 @@ html, body{
 .container{
   display:grid;
   grid-column-gap:1rem;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 2fr 6fr;
   height:100%;
   overflow:hidden;
 }
@@ -31,7 +31,10 @@ h1{
 }
 
 img{
-  max-width:75%;
+  max-width:100%;
+  margin:0 auto;
+  display:block;
+  padding:0.75rem;
 }
 
 a,
@@ -184,7 +187,7 @@ h2{
 }
 
 article{
-   padding: 1rem clamp(1rem, 5%, 3rem) 0 clamp(.5rem, 2.5%, 1.5rem);
+   padding: 1rem clamp(1rem, 5%, 3rem) 1.5rem clamp(.5rem, 2.5%, 1.5rem);
 }
 
 article > *{
@@ -204,6 +207,10 @@ article {
 
 pre{
   white-space:pre-wrap;
+}
+
+pre.code{
+    font-size: 1.1em;
 }
 
 .p{
