--- a/code/documentation/assets/scss/documentation.scss
+++ b/code/documentation/assets/scss/documentation.scss
@@ -54,6 +54,16 @@ img{
   margin:0 auto;
   display:block;
   padding:0.75rem;
+  cursor: zoom-in; 
+}
+
+dialog::backdrop{
+    background: rgba(0,0,0, 0.3);
+    backdrop-filter: blur(2px);
+    
+}
+dialog img{
+    cursor: initial;
 }
 
 figCaption{
