--- a/code/documentation/assets/css/documentation.css
+++ b/code/documentation/assets/css/documentation.css
@@ -7,11 +7,11 @@ html, body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.55;
   font-size: 1rem;
+  scroll-behavior: smooth;
 }
 
 .container {
   display: grid;
-  grid-column-gap: 1rem;
   grid-template-columns: 2fr 6fr;
   height: 100%;
   overflow: hidden;
@@ -218,6 +218,7 @@ h2 {
 }
 
 article {
+  margin-left: 1rem;
   padding: 1rem clamp(1rem, 5%, 3rem) 1.5rem clamp(0.5rem, 2.5%, 1.5rem);
 }
 
@@ -392,6 +393,24 @@ tr, td {
 
 a {
   text-decoration: none;
+}
+
+nav.searchBar {
+  background-color: white;
+  border-bottom: 1px solid #efefefef;
+  display: flex;
+  /* margin: 1rem 0; */
+  padding: 0;
+}
+nav.searchBar input {
+  height: 100%;
+  width: 100%;
+  display: block;
+  /* padding: 1rem; */
+  padding: 1rem;
+  border: none;
+  background: #fcfcfc;
+  border-bottom: 1px solid #dbd8d8;
 }
 
 /******************************************************************** EG XML */
