--- a/code/documentation/assets/css/documentation.css
+++ b/code/documentation/assets/css/documentation.css
@@ -7,6 +7,9 @@ html, body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.55;
   font-size: 1rem;
+}
+
+body * {
   scroll-behavior: smooth;
 }
 
