--- a/code/documentation/assets/scss/documentation.scss
+++ b/code/documentation/assets/scss/documentation.scss
@@ -7,7 +7,10 @@ html, body{
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height:1.55;
   font-size:1rem;
-  scroll-behavior: smooth;
+}
+
+body *{
+   scroll-behavior: smooth;
 }
 
 
