--- a/code/documentation/assets/css/documentation.css
+++ b/code/documentation/assets/css/documentation.css
@@ -13,6 +13,10 @@ body * {
   scroll-behavior: smooth;
 }
 
+#index .searchBar {
+  display: none;
+}
+
 .container {
   display: grid;
   grid-template-columns: 2fr 6fr;
