--- a/code/documentation/assets/css/documentation.css
+++ b/code/documentation/assets/css/documentation.css
@@ -406,6 +406,7 @@ nav.searchBar {
   background-color: white;
   border-bottom: 1px solid #efefefef;
   display: flex;
+  flex-wrap: wrap;
   /* margin: 1rem 0; */
   padding: 0;
 }
@@ -413,11 +414,27 @@ nav.searchBar input {
   height: 100%;
   width: 100%;
   display: block;
-  /* padding: 1rem; */
   padding: 1rem;
   border: none;
   background: #fcfcfc;
   border-bottom: 1px solid #dbd8d8;
+}
+nav.searchBar .results {
+  display: none;
+}
+nav.searchBar:focus .results, nav.searchBar:focus-within .results {
+  display: block;
+  margin-right: auto;
+  width: 100%;
+}
+nav.searchBar .result {
+  padding: 1rem 1.5em;
+}
+nav.searchBar .result + .result {
+  border-top: 1px solid #d7d7d7;
+}
+nav.searchBar .result:last-child {
+  border-bottom: 2px solid #efefef;
 }
 
 /******************************************************************** EG XML */
